Update troubleshooting guide for build errors
Add solutions for Kotlin Daemon compilation failures to the troubleshooting guide. This includes steps for stopping the Gradle daemon, clearing caches, and rebuilding the project.