@@ -1,4 +1,175 @@
-# 🔧 حل مشكلة "App not installed"
+# 🔧 دليل حل مشاكل البناء والتثبيت
+
+---
+
+## 🛠️ مشاكل البناء (Build Errors)
+
+### ❌ مشكلة: "Daemon compilation failed: Could not connect to Kotlin compile daemon"
+
+**الأعراض**:
+- Build android: failed
+- RuntimeException: Could not connect to Kotlin compile daemon
+- Waited 10 minutes for SettableFuture
+
+**الحلول** (جرّبها بالترتيب):
+
+#### 1️⃣ إيقاف Gradle Daemon وإعادة تشغيله
+
+```bash
+# في Terminal داخل Android Studio أو في مجلد المشروع
+
+# إيقاف جميع Gradle daemons
+./gradlew --stop
+
+# أو على Windows
+gradlew.bat --stop
+
+# ثم أعد البناء
+./gradlew clean build
+```
+
+#### 2️⃣ مسح Cache وإعادة البناء
+
+**في Android Studio**:
+1. `File` → `Invalidate Caches...`
+2. اختر: ✅ `Clear file system cache`
+3. اختر: ✅ `Clear VCS Log cache`
+4. اضغط `Invalidate and Restart`
+
+**أو عبر Terminal**:
+```bash
+# في مجلد android/
+cd android
+
+# حذف الكاش والملفات المؤقتة
+rm -rf .gradle/
+rm -rf build/
+rm -rf app/build/
+
+# على Windows استخدم:
+# rmdir /s /q .gradle
+# rmdir /s /q build
+# rmdir /s /q app\build
+
+# إعادة البناء
+cd ..
+npx cap sync android
+```
+
+#### 3️⃣ التحقق من إصدار Java/JDK
+
+**المشكلة**: تعارض بين إصدارات Java
+
+```bash
+# تحقق من إصدار Java الحالي
+java -version
+
+# يجب أن يكون Java 17 أو 21 (حسب Gradle)
+```
+
+**في Android Studio**:
+1. `File` → `Project Structure` → `SDK Location`
+2. تأكد من أن `JDK location` يشير إلى Java 17 أو 21
+3. إذا لم يكن موجوداً، حمّله من: `Download JDK`
+
+#### 4️⃣ تحديث Gradle وKotlin
+
+**في `android/build.gradle`**:
+```gradle
+buildscript {
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.7.2'
+        // تأكد من أن الإصدار محدّث
+    }
+}
+```
+
+**في `android/gradle/wrapper/gradle-wrapper.properties`**:
+```properties
+# تأكد من إصدار Gradle
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.9-all.zip
+```
+
+#### 5️⃣ زيادة Heap Memory لـ Gradle
+
+**في `android/gradle.properties`**:
+```properties
+# زيادة الذاكرة المخصصة
+org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+```
+
+#### 6️⃣ الحل النهائي: إعادة بناء كاملة
+
+```bash
+# 1. احذف كل شيء
+cd android
+rm -rf .gradle build app/build .idea
+
+# 2. عد للمجلد الرئيسي
+cd ..
+
+# 3. تنظيف Node modules (اختياري)
+rm -rf node_modules
+npm install
+
+# 4. بناء الويب
+npm run build
+
+# 5. مزامنة مع Android
+npx cap sync android
+
+# 6. فتح Android Studio
+npx cap open android
+```
+
+**في Android Studio**:
+1. `Build` → `Clean Project`
+2. انتظر حتى ينتهي
+3. `Build` → `Rebuild Project`
+4. انتظر حتى ينتهي
+5. `Build` → `Build APK(s)`
+
+#### 7️⃣ إعادة تشغيل كل شيء
+
+**الخطوات**:
+1. أغلق Android Studio **تماماً**
+2. أعد تشغيل الكمبيوتر (مهم!)
+3. افتح Android Studio
+4. `File` → `Sync Project with Gradle Files`
+5. `Build` → `Rebuild Project`
+
+---
+
+### ⚠️ إذا ظهرت أخطاء أخرى في Build
+
+#### خطأ: "SDK location not found"
+```bash
+# أنشئ ملف local.properties في android/
+# أضف فيه:
+sdk.dir=/path/to/your/Android/sdk
+
+# على Mac:
+sdk.dir=/Users/USERNAME/Library/Android/sdk
+
+# على Windows:
+sdk.dir=C\:\\Users\\USERNAME\\AppData\\Local\\Android\\Sdk
+
+# على Linux:
+sdk.dir=/home/USERNAME/Android/Sdk
+```
+
+#### خطأ: "Unsupported Java version"
+- تأكد من Java 17 أو 21
+- في Android Studio: `File` → `Settings` → `Build, Execution, Deployment` → `Build Tools` → `Gradle` → اختر JDK المناسب
+
+---
+
+## 📱 مشاكل التثبيت (Installation Errors)
+
+### 🔧 حل مشكلة "App not installed"
 
 ## 📋 المشكلة
 عند محاولة تثبيت التطبيق، تظهر رسالة:
